--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@koishijs/boilerplate",
-  "version": "0.0.0",
+  "name": "@koishi-nt/boilerplate",
+  "version": "0.0.1",
   "private": true,
   "files": [
     ".env",
@@ -57,35 +57,32 @@
     "yml-register": "^1.1.0"
   },
   "dependencies": {
-    "@koishijs/plugin-adapter-discord": "^3.6.1",
-    "@koishijs/plugin-adapter-lark": "^2.0.2",
-    "@koishijs/plugin-adapter-kook": "^3.8.2",
-    "@koishijs/plugin-adapter-onebot": "^5.7.1",
-    "@koishijs/plugin-adapter-telegram": "^3.7.8",
     "@koishijs/plugin-admin": "^1.3.0",
     "@koishijs/plugin-analytics": "^1.0.3",
     "@koishijs/plugin-auth": "^4.0.0",
     "@koishijs/plugin-bind": "^1.4.1",
     "@koishijs/plugin-commands": "^3.2.1",
-    "@koishijs/plugin-config": "^2.0.0",
-    "@koishijs/plugin-console": "^5.10.0",
-    "@koishijs/plugin-database-sqlite": "^3.4.4",
+    "@koishijs/plugin-config": "^2.1.0",
+    "@koishijs/plugin-console": "^5.11.0",
+    "@koishijs/plugin-database-sqlite": "^3.5.1",
     "@koishijs/plugin-dataview": "^2.3.1",
-    "@koishijs/plugin-explorer": "^1.3.1",
+    "@koishijs/plugin-explorer": "^1.3.2",
     "@koishijs/plugin-help": "^2.2.3",
     "@koishijs/plugin-insight": "^3.4.1",
     "@koishijs/plugin-inspect": "^1.1.0",
-    "@koishijs/plugin-locales": "^2.2.7",
+    "@koishijs/plugin-locales": "^2.3.1",
     "@koishijs/plugin-logger": "^2.2.3",
     "@koishijs/plugin-market": "^2.0.4",
     "@koishijs/plugin-rate-limit": "^1.3.2",
     "@koishijs/plugin-sandbox": "^3.1.5",
     "@koishijs/plugin-status": "^7.1.3",
-    "koishi": "^4.13.0",
-    "koishi-plugin-assets-local": "^3.0.4",
-    "koishi-plugin-desktop": "^0.0.4",
-    "koishi-plugin-gocqhttp": "^3.6.0",
+    "koishi": "^4.13.1",
+    "koishi-plugin-adapter-qqnt": "^0.0.1",
+    "koishi-plugin-assets-local": "^3.1.0",
+    "koishi-plugin-blockly": "^0.6.2",
     "koishi-plugin-puppeteer": "^3.5.0",
-    "koishi-plugin-theme-vanilla": "^1.0.3"
+    "koishi-plugin-shutdown": "^0.3.0",
+    "koishi-plugin-theme-vanilla": "^1.0.4",
+    "koishi-plugin-verifier": "^1.1.1"
   }
 }
