--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Check out
         uses: actions/checkout@v3
         with:
-          ref: develop
+          ref: master
 
       - name: Set up Node
         if: ${{ !matrix.target.emulate }}
